--- a/ContentAndExperience.html
+++ b/ContentAndExperience.html
@@ -84,7 +84,7 @@
             </tr>
             <tr style="height: 456px;">
               <td class="u-border-1 u-border-grey-30 u-table-cell">1</td>
-              <td class="u-border-1 u-border-grey-30 u-table-cell"><b>&nbsp;What Java 8 Features you used in your project?</b>
+              <td class="u-border-1 u-border-grey-30 u-table-cell">
                 <br>
                 <br>
 				<b>
@@ -92,17 +92,8 @@
                   <span style="font-weight: 400;">Content vs Experience Fragment</span></b>
                 <br>
 				<b>
-							  
-				<span style="font-weight: 400;">&nbsp;Only data, without design.
-			The content fragment model defines the structure of a content fragment.
-			Used in AEM or via Content Services for a ‘headless’ approach.
-			A content fragment can belong to an experience fragment.
-						<br/><br/>
-			Content and design.
-			Can be a diverse group of diverse components.
-			Experience Fragments can be used in different variants on the website and external channels.
-			It’s not possible to create a content fragment from an experience fragment.
-				</span>
+				 <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*XhulO6I5fp-S4Tl33LgvbQ.png"/>			  
+				
 				</b>
                 <br>
               </td>
