--- a/ContentAndExperience.html
+++ b/ContentAndExperience.html
@@ -91,7 +91,7 @@
                   <span style="font-weight: 400;">Content vs Experience Fragment</span></b>
                 <br>
 		<b>
-		<img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*XhulO6I5fp-S4Tl33LgvbQ.png"/>			  
+		<img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*XhulO6I5fp-S4Tl33LgvbQ.png"  width="630" />			  
 		</b>
                 <br>
               </td>
