--- a/ContentAndExperience.html
+++ b/ContentAndExperience.html
@@ -76,6 +76,10 @@
           </colgroup>
           <tbody class="u-table-body">
             <tr style="height: 46px;">
+              <td class="u-border-1 u-border-grey-30 u-table-cell">
+                <span style="font-weight: 700;">S.NO.</span>
+                <span style="font-weight: 700;"></span>
+              </td>
               <td class="u-border-1 u-border-grey-30 u-table-cell u-table-cell-2">Question &amp; Answer</td>
             </tr>
             <tr style="height: 456px;">
@@ -90,6 +94,17 @@
 		<img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*XhulO6I5fp-S4Tl33LgvbQ.png"  width="630" />			  
 		</b>
                 <br>
+				landingpage --> tools --> Assets --> Content Fragment Model
+				The created model will store 
+				/conf/ecart-app/settings/dam/cfm/model
+
+
+				Content Fragments will store in assets
+				/content/dam/ecart-app/content-fragments/en/
+
+
+				Experience Fragments will store in 
+				/content/experience-fragments
               </td>
             </tr>
                      
